package com.despotisme.entities;

public interface Fight {
    public void attack();
}
