package com.despotisme.entities;

public interface Move {
    public void moveUp();
    public void moveDown();
    public void moveLeft();
    public void moveRight();
}
